[package]
name = "canopeners"
description = "CANOpen client library"
version = "0.1.0"
edition = "2021"
exclude = [
    "cia301.pdf",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
socketcan = "3.3.0"
thiserror = "1.0.50"

